--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "estrella-servidor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
@@ -21,11 +21,11 @@
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.11",
-    "pg": "^8.3.3",
+    "nodemailer": "^6.4.14",
+    "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.3.5",
-    "typeorm": "^0.2.26",
+    "typeorm": "^0.2.28",
     "validator": "^13.1.17"
   },
   "devDependencies": {
@@ -34,10 +34,10 @@
     "@types/formidable": "^1.0.31",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.14.0",
     "@types/nodemailer": "^6.4.0",
     "@types/validator": "^13.1.0",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
     "typeorm-seeding": "^1.6.1",
