Se implementaron las funciones de clientes, usuarios, roles, menus, submenus, roles-menus, roles-usuarios

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
    "username": "edwar",
    "password": "",
    "database": "estrella",
-   "dropSchema": true,
+   "dropSchema": false,
    "synchronize": true,
    "logging": false,
    "entities": [
