--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "typescript-tslint-plugin": "^1.0.1"
   }
 }
