--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.3.5",
+    "tslib": "^2.3.1",
     "typeorm": "^0.2.28",
     "validator": "^13.1.17"
   },
@@ -50,10 +51,9 @@
     "@types/pdfmake": "^0.1.16",
     "@types/validator": "^13.1.0",
     "nodemon": "^2.0.6",
+    "prettier": "^2.4.1",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.3",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "^3.9.7",
-    "typescript-tslint-plugin": "^1.0.1"
+    "typescript": "^3.9.7"
   }
 }
